--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #ece2e2;
   font-size: 8pt;
   letter-spacing: 1px;
   /*padding: 25px;*/
@@ -110,7 +110,7 @@ nav h1 a {
 .filter-options {
   max-width:  100%;
   /*height: 50px;*/
-  background-color: #3397DB;
+  background-color: #1b1fa2;
   align-items: center;
 }
 .filter-options h2 {
@@ -163,7 +163,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #8c520f;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -179,7 +179,7 @@ nav h1 a {
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: #670202;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
